removing code which triggers maven compile